--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <nav-2>
                 <nav-l>
                     <ul>
-                        <li  style="text-decoration: underline;"><a href="/index.html">Home</a></li>
+                        <li  style="text-decoration: underline;"><a href="./index.html">Home</a></li>
                         <!-- <li><a href="#about">About</a></li> -->
-                        <li><a href="/about.html">About</a></li>
+                        <li><a href="./about.html">About</a></li>
                         <!-- <li><a href="#services">Services</a></li> -->
-                        <li><a href="/services.html">Services</a></li>
+                        <li><a href="./services.html">Services</a></li>
                         <li class="dropdown">
                             <a class="drop-btn" href="/products.html">Products</a>
                             <div class="dropdown-content" style="display: none;">
@@ -37,7 +37,7 @@
                             </div>
                         </li>
                         <li class="dropdown">
-                            <a href="/contact.html">Contact us</a>
+                            <a href="./contact.html">Contact us</a>
                             <div class="dropdown-content">
                                 <a href="https://www.facebook.com">Facebook</a>
                                 <a href="https://www.mail.com">E-mail</a>
