--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
         <nav-2>
             <nav-l>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li style="text-decoration: underline;"><a href="/about.html">About</a></li>
-                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li style="text-decoration: underline;"><a href="./about.html">About</a></li>
+                    <li><a href="./services.html">Services</a></li>
                     <li class="dropdown">
                         <a class="drop-btn" href="/products.html">Products</a>
                         <div class="dropdown-content">
@@ -35,7 +35,7 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="/contact.html">Contact us</a>
+                        <a href="./contact.html">Contact us</a>
                         <div class="dropdown-content">
                             <a href="https://www.facebook.com">Facebook</a>
                             <a href="https://www.mail.com">E-mail</a>
