--- a/contact.html
+++ b/contact.html
@@ -98,11 +98,11 @@
         <nav-2>
             <nav-l>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./services.html">Services</a></li>
                     <li class="dropdown">
-                        <a class="drop-btn" href="/products.html">Products</a>
+                        <a class="drop-btn" href="./products.html">Products</a>
                         <div class="dropdown-content">
                             <a href="#t-shart">T-Shart</a>
                             <a href="#shart">Shart</a>
@@ -111,7 +111,7 @@
                         </div>
                     </li>
                     <li  style="text-decoration: underline; " class="dropdown">
-                        <a href="/contact.html">Contact us</a>
+                        <a href="./contact.html">Contact us</a>
                         <div class="dropdown-content">
                             <a href="https://www.facebook.com">Facebook</a>
                             <a href="https://www.mail.com">E-mail</a>
