--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <!-- <li><a href="#services">Services</a></li> -->
                         <li><a href="./services.html">Services</a></li>
                         <li class="dropdown">
-                            <a class="drop-btn" href="/products.html">Products</a>
+                            <a class="drop-btn" href="./products.html">Products</a>
                             <div class="dropdown-content" style="display: none;">
                                 <a href="#t-shart">T-Shart</a>
                                 <a href="#shart">Shart</a>
